--- a/Polar/Base.lproj/Main.storyboard
+++ b/Polar/Base.lproj/Main.storyboard
@@ -22,32 +22,48 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uB0-pc-kAF">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="464"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="427"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="z8n-Rt-Wo9"/>
+                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TxY-Z0-hMy">
-                                <rect key="frame" x="0.0" y="464" width="320" height="104"/>
+                                <rect key="frame" x="0.0" y="427" width="320" height="141"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gk4-02-A6U">
-                                        <rect key="frame" x="131" y="23" width="58" height="58"/>
+                                        <rect key="frame" x="130" y="61" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="shutterPressedDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gtc-t7-6WR"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9vl-te-xOB">
-                                        <rect key="frame" x="245" y="23" width="58" height="58"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RmE-Yj-8j7">
+                                        <rect key="frame" x="256" y="91" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="rDy-O6-xTM"/>
+                                        </constraints>
+                                        <state key="normal" title="Grid">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="addGridLinesWith_sender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xxp-8k-SmA"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.50382543103448274" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="RmE-Yj-8j7" secondAttribute="bottom" constant="20" id="5my-V0-PGU"/>
+                                    <constraint firstItem="RmE-Yj-8j7" firstAttribute="top" secondItem="TxY-Z0-hMy" secondAttribute="top" constant="91" id="CFZ-Vr-VS8"/>
+                                    <constraint firstAttribute="trailing" secondItem="RmE-Yj-8j7" secondAttribute="trailing" constant="18" id="NKb-Tv-idY"/>
+                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xGz-sI-al6">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uPB-gh-c1e">
-                                        <rect key="frame" x="150" y="22" width="21" height="22"/>
+                                        <rect key="frame" x="150" y="25" width="21" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="cycle">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -63,7 +79,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="xGz-sI-al6" secondAttribute="trailing" id="4da-zm-sLk"/>
-                            <constraint firstItem="TxY-Z0-hMy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="464" id="7xy-HY-mMN"/>
+                            <constraint firstItem="TxY-Z0-hMy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="427" id="7xy-HY-mMN"/>
                             <constraint firstItem="xGz-sI-al6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8ww-iD-FGN"/>
                             <constraint firstItem="uB0-pc-kAF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gwn-0S-Dq9"/>
                             <constraint firstItem="TxY-Z0-hMy" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="UvM-kD-F0k"/>
@@ -73,7 +89,7 @@
                             <constraint firstAttribute="bottom" secondItem="xGz-sI-al6" secondAttribute="bottom" constant="513" id="jLe-tg-uq4"/>
                             <constraint firstItem="uB0-pc-kAF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="mme-RO-sEW"/>
                             <constraint firstItem="xGz-sI-al6" firstAttribute="leading" secondItem="TxY-Z0-hMy" secondAttribute="leading" id="xPw-Bn-S2d"/>
-                            <constraint firstItem="uB0-pc-kAF" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="-104" id="zKF-jE-o7h"/>
+                            <constraint firstItem="uB0-pc-kAF" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="-141" id="zKF-jE-o7h"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="iza-Vu-9OH">
@@ -81,10 +97,11 @@
                     </navigationItem>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="actionsView" destination="TxY-Z0-hMy" id="AyO-Wm-iRS"/>
+                        <outlet property="headerView" destination="xGz-sI-al6" id="97w-1a-moS"/>
                         <outlet property="previewView" destination="uB0-pc-kAF" id="CwM-0F-RZf"/>
                         <outlet property="reverseButton" destination="uPB-gh-c1e" id="idB-6j-cn3"/>
                         <outlet property="shutterButton" destination="gk4-02-A6U" id="j6p-44-cNZ"/>
-                        <outlet property="viewForImage" destination="uB0-pc-kAF" id="zax-ed-a2M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
