--- a/Polar/Editor.storyboard
+++ b/Polar/Editor.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Pq3-XN-RKI">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,36 +21,95 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BU8-pQ-cc2">
-                                <rect key="frame" x="0.0" y="64" width="320" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BU8-pQ-cc2">
+                                <rect key="frame" x="0.0" y="181" width="320" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="gSO-qo-CGj"/>
+                                </constraints>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="djP-Vp-wsb">
-                                <rect key="frame" x="0.0" y="284" width="375" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZZF-ZY-4B4">
-                                    <size key="itemSize" width="69" height="70"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="djP-Vp-wsb">
+                                <rect key="frame" x="0.0" y="418" width="320" height="90"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="hmb-4D-hPH"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="9" minimumInteritemSpacing="9" id="ZZF-ZY-4B4">
+                                    <size key="itemSize" width="75" height="90"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="wKi-hO-Uiv" customClass="PresetViewCell" customModule="Polar" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="69" height="70"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PresetCell" id="wKi-hO-Uiv" customClass="PresetViewCell" customModule="Polar" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="75" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="69" height="70"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="75" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="59u-yL-Tya">
+                                                    <rect key="frame" x="0.0" y="0.0" width="75" height="90"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="presetImage" translatesAutoresizingMaskIntoConstraints="NO" id="m25-ah-0xz">
+                                                            <rect key="frame" x="0.0" y="0.0" width="75" height="56"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2A-nH-ETV">
+                                                            <rect key="frame" x="0.0" y="56" width="75" height="34"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="u2A-nH-ETV" firstAttribute="top" secondItem="59u-yL-Tya" secondAttribute="top" constant="56" id="Izh-bz-aC7"/>
+                                                        <constraint firstItem="u2A-nH-ETV" firstAttribute="leading" secondItem="m25-ah-0xz" secondAttribute="leading" id="U8R-TM-UlU"/>
+                                                        <constraint firstAttribute="bottom" secondItem="u2A-nH-ETV" secondAttribute="bottom" id="g45-pa-Egc"/>
+                                                        <constraint firstItem="u2A-nH-ETV" firstAttribute="trailing" secondItem="m25-ah-0xz" secondAttribute="trailing" id="pnB-1g-7IQ"/>
+                                                        <constraint firstItem="u2A-nH-ETV" firstAttribute="top" secondItem="m25-ah-0xz" secondAttribute="bottom" id="rP2-nV-Rmc"/>
+                                                        <constraint firstItem="u2A-nH-ETV" firstAttribute="leading" secondItem="59u-yL-Tya" secondAttribute="leading" id="tNU-0K-Ssa"/>
+                                                        <constraint firstAttribute="trailing" secondItem="u2A-nH-ETV" secondAttribute="trailing" id="vMN-eN-R3C"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="59u-yL-Tya" secondAttribute="bottom" id="HoY-yJ-SqO"/>
+                                            <constraint firstItem="59u-yL-Tya" firstAttribute="leading" secondItem="wKi-hO-Uiv" secondAttribute="leading" id="lgz-AW-r4d"/>
+                                            <constraint firstItem="59u-yL-Tya" firstAttribute="top" secondItem="wKi-hO-Uiv" secondAttribute="top" id="pjy-nD-RYI"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="m25-ah-0xz" id="5Pa-i7-Qdc"/>
+                                            <outlet property="titleLabel" destination="u2A-nH-ETV" id="NMr-Qp-Yon"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EKQ-0A-hMG">
+                                <rect key="frame" x="0.0" y="516" width="320" height="52"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="djP-Vp-wsb" firstAttribute="leading" secondItem="jyc-J8-Ygg" secondAttribute="leading" id="36D-T1-Bgj"/>
+                            <constraint firstAttribute="trailing" secondItem="djP-Vp-wsb" secondAttribute="trailing" id="83V-rH-rka"/>
+                            <constraint firstItem="BU8-pQ-cc2" firstAttribute="leading" secondItem="jyc-J8-Ygg" secondAttribute="leading" id="BAt-vM-tRz"/>
+                            <constraint firstItem="djP-Vp-wsb" firstAttribute="top" secondItem="BU8-pQ-cc2" secondAttribute="bottom" constant="37" id="H4J-r8-tKi"/>
+                            <constraint firstItem="yvc-Uy-f2e" firstAttribute="top" secondItem="EKQ-0A-hMG" secondAttribute="bottom" id="JZB-ZZ-rsd"/>
+                            <constraint firstItem="EKQ-0A-hMG" firstAttribute="top" secondItem="djP-Vp-wsb" secondAttribute="bottom" constant="8" id="MuA-KL-3ZJ"/>
+                            <constraint firstItem="EKQ-0A-hMG" firstAttribute="leading" secondItem="jyc-J8-Ygg" secondAttribute="leading" id="N1R-Zm-SB8"/>
+                            <constraint firstItem="BU8-pQ-cc2" firstAttribute="top" secondItem="eHP-8a-C7P" secondAttribute="bottom" constant="117" id="lk2-xg-5jx"/>
+                            <constraint firstAttribute="trailing" secondItem="EKQ-0A-hMG" secondAttribute="trailing" id="qgU-2i-ASF"/>
+                            <constraint firstAttribute="trailing" secondItem="BU8-pQ-cc2" secondAttribute="trailing" id="qwi-dq-dpJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kYh-LS-a8C"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="currentImageView" destination="BU8-pQ-cc2" id="mdg-J5-amc"/>
+                        <outlet property="presetsCollectionView" destination="djP-Vp-wsb" id="aWO-JT-Xcw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zft-bX-32A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -75,4 +134,7 @@
             <point key="canvasLocation" x="2642.4000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="presetImage" width="75" height="56"/>
+    </resources>
 </document>
